--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.github.Kunzisoft:Android-SwitchDateTimePicker:1.6'
-
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'joda-time:joda-time:2.9.9'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
